# ComicsManagement

./: README.md  pyproject.toml
comics/: .coverage  .gitignore  File Name.xlsx  db.sqlite3  setup.cfg  test.py
comics/app/: addclientform.py  addforms.py  create_test_data.py  data_processing.py  fake_data.py  graph_data.py  models.py  script.py  serializers.py  urls.py  views.py
comics/app/csv/: Marvel_January_21.csv
comics/app/migrations/: 0001_initial.py  0002_auto_20210328_1712.py  0003_auto_20210328_1721.py
comics/app/static/: client_table_style.css  form_style.css  home_style.css  main.css  script.js  suscription_table_style.css
comics/app/static/css/: base_style.css  client_form_style.css  client_table_style.css  dashboard_style.css  home_style.css  navbar_style.css  sub_form_style.css  subscription_table_style.css
comics/app/static/files/: JAN21_COF.txt  JAN21_COF.txt:Zone.Identifier
comics/app/static/js/: dashboard_script.js  (+1 more)
comics/app/templates/: 404.html  add-client-form.html  add-subscription-form.html  add_client_form.html  client_table.html  dashboard.html  footer.html  form_ideas.html  graph_test.html  index2.html  navbar.html  series_subscription.html  series_subscription_table.html  series_table.html  submit_ideas.html  subscription_table.html  suscription_table.html
comics/app/tests/: test_data_processing.py  test_fake_data.py  test_graph_data.py  test_models.py
comics/comics/: settings.py  urls.py
comics/templates/: base.html  home.html
comics/templates/app/: client_confirm_delete.html
comics/templates/registration/: login.html
(+1 files in other folders)
