[tool.poetry]
name = "comics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
pandas = "^1.2.3"
Faker = "^7.0.1"
django-widget-tweaks = "^1.4.8"
django_extensions = "^3.1.3"
pytest = "^6.2.3"
pytest-django = "^4.2.0"
pytest-cov = "^2.11.1"
pytest-factoryboy = "^2.1.0"
pytest-xdist = "^2.2.1"
django-coverage-plugin = "^1.8.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
